--- a/Practika/Pages/Examination.xaml
+++ b/Practika/Pages/Examination.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Practika.Pages.Authoriztion"
+﻿<Page x:Class="Practika.Pages.Examination"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -9,10 +9,9 @@
       d:DesignWidth="1440"
       MinHeight="640"
       MinWidth="820"
-      Title="Authoriztion">
+      Title="Examination">
 
     <Grid Background="White">
-
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="2*" />
             <ColumnDefinition Width="1*" />
@@ -55,13 +54,13 @@
             MinWidth="100"
             Fill="#677BA1"
             Margin="0,0,90,0" 
-            Grid.Column="1" Grid.Row="0" Grid.RowSpan="7"/>
+            Grid.Column="1" Grid.Row="0"/>
 
         <Rectangle
             MinWidth="100"
             Fill="#677BA1"
             Margin="90,0,0,0" 
-            Grid.Column="5" Grid.Row="0" Grid.RowSpan="7"/>
+            Grid.Column="5" Grid.Row="0" />
 
         <Rectangle
             MinWidth="100"
@@ -110,82 +109,90 @@
         <Image Source="Logo.png" 
                Grid.Column="2" Grid.Row="0"/>
 
-
         <Rectangle
             Fill="#85DECA"
-            Grid.Column="3" Grid.Row="2" Grid.RowSpan="4" 
-            Margin="1,3,1,143"/>
+            Grid.Column="1" Grid.Row="2"
+            Grid.ColumnSpan="5"
+            Grid.RowSpan="4"/>
+        <Rectangle
+            Fill="#677BA1" Grid.ColumnSpan="5" Grid.Column="1" Margin="0,0,0,100" Grid.Row="2"
+            />
 
-        <Button
-            Content="Авторизация"
-            Grid.Column="3" Grid.Row="5"
-            HorizontalAlignment="Left" 
-            Margin="61,18,0,0" VerticalAlignment="Top" 
-            Height="70" Width="265" 
-            Padding="1" FontFamily="Segoe Script" FontSize="22" 
-            BorderBrush="Black" Background="White"
-            Click="SignIn_Click">
-            <Button.Resources>
-                <Style TargetType="Border">
-                    <Setter Property="CornerRadius" Value="25" />
-                </Style>
-            </Button.Resources>
-        </Button>
+        <Rectangle
+            Fill="#677BA1" Grid.ColumnSpan="5" Margin="0,100,0,0" Grid.Row="5" Grid.Column="1"
+            />
 
-        <Button  
-            Content="Регистация"
-            Grid.Column="3" Grid.Row="5"
-            HorizontalAlignment="Left" 
-            Margin="61,103,0,0" VerticalAlignment="Top"
-            Height="70" Width="265" 
-            Click="SignUp_Click"
-            Padding="1" FontFamily="Segoe Script" FontSize="22" 
-            BorderBrush="Black" Background="White" Grid.RowSpan="2">
-            <Button.Resources>
-                <Style TargetType="Border">
-                    <Setter Property="CornerRadius" Value="25" />
-                </Style>
-            </Button.Resources>
-        </Button>
+        <Rectangle
+            Fill="#677BA1" Margin="0,0,100,0" Grid.Row="2" Grid.Column="1" Grid.RowSpan="4"
+            />
+
+        <Rectangle
+            Fill="#677BA1" Margin="100,0,0,0" Grid.Row="2" Grid.Column="5" Grid.RowSpan="4"
+            />
 
         <TextBox 
-            x:Name="Login" Grid.Column="3" Grid.Row="2"
+            x:Name="Login" Grid.Column="3" Grid.Row="3"
             HorizontalAlignment="Left" 
-            Margin="46,86,0,16" 
+            Margin="56,5,0,96" 
             Height="45" Width="285" FontSize="22"/>
 
         <TextBox 
             x:Name="Password" Grid.Column="3" Grid.Row="3"
             HorizontalAlignment="Left" 
-            Margin="51,96,0,6" 
+            Margin="56,90,0,11" 
             Height="45" Width="285" FontSize="22"/>
+
+        <TextBlock 
+            x:Name="Teacher" Grid.Column="3" Grid.Row="4"
+            HorizontalAlignment="Left" 
+            Margin="56,24,0,77" 
+            Height="45" Width="285" FontSize="22" Background="White"/>
 
         <Label Grid.Column="3" Grid.Row="2"
             Content="Логин" 
             HorizontalAlignment="Left" VerticalAlignment="Top"
-            Margin="141,36,0,0" Width="90"
-            FontFamily="Segoe Script" FontSize="22" RenderTransformOrigin="3.322,0.111"/>
+            Margin="161,107,0,0" Width="75"
+            FontFamily="Segoe Script" FontSize="18" RenderTransformOrigin="3.322,0.111"/>
 
         <Label Grid.Column="3" Grid.Row="3"
             Content="Пароль" 
             HorizontalAlignment="Left" VerticalAlignment="Top"
-            Margin="141,50,0,0" Width="100"
-            FontFamily="Segoe Script" FontSize="22" RenderTransformOrigin="2.64,0.444"/>
+            Margin="156,56,0,0" Width="80"
+            FontFamily="Segoe Script" FontSize="18" RenderTransformOrigin="2.64,0.444"/>
+
+        <Label Grid.Column="3" Grid.Row="3"
+            Content="Преподаватель" 
+            HorizontalAlignment="Left" VerticalAlignment="Top"
+            Margin="116,136,0,0" Width="160"
+            FontFamily="Segoe Script" FontSize="18" RenderTransformOrigin="2.64,0.444" Grid.RowSpan="2"/>
+
+        <Label Grid.Column="3" Grid.Row="4"
+            Content="Поступление" 
+            HorizontalAlignment="Left" VerticalAlignment="Top"
+            Margin="126,70,0,0" Width="145"
+            FontFamily="Segoe Script" FontSize="18" RenderTransformOrigin="2.64,0.444"/>
+
+        <TextBlock 
+            x:Name="Check" Grid.Column="3" Grid.Row="4"
+            HorizontalAlignment="Left" 
+            Margin="56,104,0,143" 
+            Height="45" Width="285" FontSize="22" Grid.RowSpan="2" Background="White"/>
 
         <Button  
-            Content="Проверка на поступление"
-            Grid.Column="3" Grid.Row="6"
+            Content="Проверка"
+            Grid.Column="3" Grid.Row="5"
             HorizontalAlignment="Left" 
-            Margin="81,42,0,0" VerticalAlignment="Top"
-            Height="50" Width="225" 
-            Click="SignIn_Click1"
-            Padding="1" FontFamily="Segoe Script" FontSize="14" 
+            Margin="116,38,0,0" VerticalAlignment="Top"
+            Height="50" Width="155" 
+            Padding="1" FontFamily="Segoe Script" FontSize="18" 
+            Click="Check_Click"
             BorderBrush="Black" Background="White">
             <Button.Resources>
                 <Style TargetType="Border">
-                    <Setter Property="CornerRadius" Value="16" />
+                    <Setter Property="CornerRadius" Value="14" />
                 </Style>
             </Button.Resources>
         </Button>
+
     </Grid>
 </Page>
