--- a/Practika/Pages/Authoriztion.xaml
+++ b/Practika/Pages/Authoriztion.xaml
@@ -187,5 +187,20 @@
                 </Style>
             </Button.Resources>
         </Button>
+
+        <Button  
+            Content="Расписание" Grid.Row="6"
+            HorizontalAlignment="Left" 
+            Margin="65,22,0,0" VerticalAlignment="Top"
+            Height="70" Width="110" 
+            Click="Schedule_Click"
+            Padding="1" FontFamily="Segoe Script" FontSize="14" 
+            BorderBrush="Black" Background="White" RenderTransformOrigin="-4.222,0.5">
+            <Button.Resources>
+                <Style TargetType="Border">
+                    <Setter Property="CornerRadius" Value="16" />
+                </Style>
+            </Button.Resources>
+        </Button>
     </Grid>
 </Page>
