--- a/Practika/Pages/Schedule.xaml
+++ b/Practika/Pages/Schedule.xaml
@@ -131,7 +131,7 @@
             Fill="#677BA1" Margin="100,0,0,0" Grid.Row="2" Grid.Column="5" Grid.RowSpan="4"
             />
 
-        <ComboBox x:Name="Group1" 
+        <ComboBox x:Name="Group1" IsReadOnly="True"
             Grid.Column="2" Grid.Row="3" Margin="72,110,252,0" 
             VerticalAlignment="Top" Height="24"
             Grid.ColumnSpan="2" Width="200" Grid.RowSpan="1">
@@ -165,7 +165,7 @@
             </TextBlock>
         </ComboBox>
 
-        <ComboBox x:Name="Group2" 
+        <ComboBox x:Name="Group2" IsReadOnly="True"
             Grid.Column="3" Grid.Row="3" 
             Margin="216,111,101,0" Width="200" 
             VerticalAlignment="Top" Height="24"
@@ -193,7 +193,7 @@
             </TextBlock>
         </ComboBox>
 
-        <ComboBox x:Name="Group3" 
+        <ComboBox x:Name="Group3" IsReadOnly="True"
             Grid.Column="3" Grid.Row="4" Margin="56,109,112,0" 
             VerticalAlignment="Top" Height="24" Width="200">
             <TextBlock Text="9:00-10:00">
