--- a/Practika/Pages/Examination.xaml
+++ b/Practika/Pages/Examination.xaml
@@ -143,10 +143,16 @@
             Height="45" Width="285" FontSize="22"/>
 
         <TextBlock 
-            x:Name="Teacher" Grid.Column="3" Grid.Row="4"
+            x:Name="Teacher" Grid.Column="1" Grid.Row="4"
             HorizontalAlignment="Left" 
-            Margin="56,24,0,77" 
-            Height="45" Width="285" FontSize="22" Background="White"/>
+            Margin="63,29,0,72" 
+            Height="45" Width="335" FontSize="22" Background="White" Grid.ColumnSpan="3"/>
+
+        <TextBlock 
+            x:Name="Spec" Grid.Column="3" Grid.Row="4"
+            HorizontalAlignment="Right" 
+            Margin="0,29,53,72" 
+            Height="45" Width="330" FontSize="22" Background="White" Grid.ColumnSpan="3"/>
 
         <Label Grid.Column="3" Grid.Row="2"
             Content="Логин" 
@@ -160,22 +166,29 @@
             Margin="156,56,0,0" Width="80"
             FontFamily="Segoe Script" FontSize="18" RenderTransformOrigin="2.64,0.444"/>
 
-        <Label Grid.Column="3" Grid.Row="3"
+        <Label Grid.Column="2" Grid.Row="3"
             Content="Преподаватель" 
             HorizontalAlignment="Left" VerticalAlignment="Top"
-            Margin="116,136,0,0" Width="160"
-            FontFamily="Segoe Script" FontSize="18" RenderTransformOrigin="2.64,0.444" Grid.RowSpan="2"/>
+            Margin="22,135,0,0" Width="160"
+            FontFamily="Segoe Script" FontSize="18" RenderTransformOrigin="2.64,0.444" Grid.RowSpan="2" Grid.ColumnSpan="2"/>
+
+        <Label Grid.Column="3" Grid.Row="3"
+            Content="Специальность" 
+            HorizontalAlignment="Left" VerticalAlignment="Top"
+            Margin="356,136,0,0" Width="170"
+            FontFamily="Segoe Script" FontSize="18" 
+            RenderTransformOrigin="2.64,0.444" Grid.ColumnSpan="3" Grid.RowSpan="2"/>
 
         <Label Grid.Column="3" Grid.Row="4"
             Content="Поступление" 
             HorizontalAlignment="Left" VerticalAlignment="Top"
-            Margin="126,70,0,0" Width="145"
+            Margin="126,79,0,0" Width="145"
             FontFamily="Segoe Script" FontSize="18" RenderTransformOrigin="2.64,0.444"/>
 
         <TextBlock 
             x:Name="Check" Grid.Column="3" Grid.Row="4"
             HorizontalAlignment="Left" 
-            Margin="56,104,0,143" 
+            Margin="56,114,0,133" 
             Height="45" Width="285" FontSize="22" Grid.RowSpan="2" Background="White"/>
 
         <Button  
@@ -194,5 +207,19 @@
             </Button.Resources>
         </Button>
 
+        <Button  
+            Content="Назад" Grid.Row="2"
+            HorizontalAlignment="Left" 
+            Margin="34,51,0,0" VerticalAlignment="Top"
+            Height="40" Width="70"
+            Click="Back_Click"
+            Padding="1" FontFamily="Segoe Script" FontSize="12" 
+            BorderBrush="Black" Background="White" RenderTransformOrigin="-4.222,0.5" Grid.Column="1">
+            <Button.Resources>
+                <Style TargetType="Border">
+                    <Setter Property="CornerRadius" Value="12" />
+                </Style>
+            </Button.Resources>
+        </Button>
     </Grid>
 </Page>
