--- a/Practika/Pages/Selection committee.xaml
+++ b/Practika/Pages/Selection committee.xaml
@@ -15,23 +15,27 @@
 
         <Grid.RowDefinitions>
             <RowDefinition />
-            <RowDefinition Height="270" />
+            <RowDefinition Height="170" />
         </Grid.RowDefinitions>
 
         <StackPanel Grid.Row="1" Orientation="Horizontal">
             <Button x:Name="Add" 
                     FontFamily="Arial" FontSize="14" 
                     Width="100" Height="40" Content="Одобрить" 
-                    Margin="600,-100,0,115" Click="ButtonAdd"/>
+                    Margin="500,8,0,22" Click="ButtonAdd"/>
             <Button x:Name="Del" 
                     FontFamily="Arial" FontSize="14" 
                     Width="100" Height="40" Content="Отклонение"
-                    Margin="0 0 0 100"
+                    Margin="10,8,0,22"
                      Click="Close1"/>
             <Button x:Name="Delete" 
                     FontFamily="Arial" FontSize="14" 
-                    Width="100" Height="40" Content="Delete" 
-                    Margin="10 -210 0 0" Click="ButtonDel"/>
+                    Width="100" Height="40" Content="Удалить" 
+                    Margin="10,8,0,22" Click="ButtonDel"/>
+            <Button x:Name="Back" 
+                    FontFamily="Arial" FontSize="14" 
+                    Width="100" Height="40" Content="Назад" 
+                    Margin="10,8,0,22" Click="Back_Click"/>
         </StackPanel>
 
         <StackPanel>
